2.10 beta 3
    - Fix GoogleScholarFetcher (patch 207)
    - Line breaks in BibTeX fields (e.g., abstract and review) are now kept.
    - Fixed completeness indicator in main table for entries with crossrefs and either/or required fields.
    - Fixed [shorttitle] and [veryshorttitle] key generator markers, so they remove punctuation as described
      in the documentation.
2.10 beta 2
    - Patched Windows install script to avoid wrong placement of Start menu items.
    - Reintroduced right-click on type label in entry editor to change entry type.
    - Fixed compatibility issue with OpenOffice plugin
    - Added Russian as language
    - Fix for bug 1160: Certain DOI references with "<" characters are not processed correctly (by Jonathan Powell)
    - Fix for bug 1153: Bug in user-specific file paths stored in @comment (by  Thomas Arildsen)
2.10 beta
    - Applied fix for JStor fetcher (patch 202 by Nicolas Brouard)
    - Added Settings menu item "Clear connection settings" in OpenOffice/LibreOffice panel.
    - Added support for specifying a BibTeX file at "--importToOpen". This allows a usage in browsers
      to directly append downloaded entries to the currently opened database.
    - Added Unicode to LaTeX conversion for Medline imports (feature 721)
    - Added Unicode to LaTeX conversion cleanup action (feature 721)
    - Added countries, weekdays and months to the case keeper
    - Added support for Emacs key bindings at the entry editor.
      To avoid collisions of common key bindings, Page up and page down (C-v) are not supported as C-v is "paste" in Windows key bindings. 
    - Added a formatter for units which keeps the case and adds non-breaking separators
    - Added a Merge entries functionality
    - Added a setting to choose either a DOI link or a URL to be standard (feature 710)
    - Added button to change entry type. Removed this functionality from the type label, and
      reduced the font size.